Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-65590

Bounding volume calculation does not take the index attribute into account

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.11.0
    • 5.9, 5.10, 5.11
    • Qt3D
    • None
    • 1d874d33da9174a82fccc266c66a22af006ac8ef

      Imagine a case where two or more entities share the same vertex and index buffers and attributes, with the only difference being the byteOffset in the index attribute.

      Here calculating a bounding volume based solely on the position attribute is wrong since it gives the exact same results for all the entities. Unfortunately this is exactly what calculateLocalBoundingVolume() does.

      Ideally everything starting from BoundingVolumeCalculator should take the index attribute into account and, whenever the index attribute is present, vertex traversal should be done accordingly.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            lagocs Laszlo Agocs
            lagocs Laszlo Agocs
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes