Attempt to fix occasional incorrect entity sorting

The ordering of entities with the same depth sort key is undefined. This
can be mitigated by assigning a different Z value for each command (draw
call, i.e. entity). However, the end result is unfortunately still wrong
for now due to QTBUG-65590.

Sounds like we should fall back to DeIndexAllBuffers() but let's see...